# mangadex-scraper

./: .gitignore  Cargo.toml  README.md
src/: main.rs  mangadex_api.rs
