[package]
name = "mangadex-scraper"
version = "0.5.1"
authors = ["dyedquartz <dyedquartz@gmail.com>"]
edition = "2018"
description = "scrapes manga off of mangadex.org"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dyedquartz/mangadex-scraper"
readme = "README.md"

[dependencies]
clap = "2"
reqwest = "0"
serde = { version = "1", features = ["derive"] }