[package]
name = "mangadex-scraper"
version = "0.6.0"
authors = ["dyedquartz <dyedquartz@gmail.com>"]
edition = "2018"
description = "scrapes manga off of mangadex.org"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dyedquartz/mangadex-scraper"
readme = "README.md"

[dependencies]
clap = "2.33"
druid = "0.7.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
